# Pre-Vibe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh.md  SECURITY.md  architecture.md
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: installation.md  privacy.md  quickstart.md  troubleshooting.md  workflow.md
plugins/pre-vibe/: README.md
plugins/pre-vibe/.codex-plugin/: plugin.json
plugins/pre-vibe/scripts/: mcp_server.py  pre_vibe.py  pv_artifacts.py  pv_compact.py  pv_environment.py  pv_models.py  pv_questions.py  pv_routing.py  pv_settings.py  pv_terms.py  pyproject.toml
plugins/pre-vibe/skills/pre-vibe/: SKILL.md
plugins/pre-vibe/skills/pre-vibe-workflow/: SKILL.md
pre-vibe-plugin/: .mcp.json  README.md
pre-vibe-plugin/.codex-plugin/: plugin.json
pre-vibe-plugin/commands/: pre-vibe.md
pre-vibe-plugin/scripts/: install_slash_prompt.py  mcp_server.py  pre_vibe.py
pre-vibe-plugin/skills/pre-vibe/: SKILL.md
pre-vibe-plugin/skills/pre-vibe/agents/: openai.yaml
pre-vibe-plugin/skills/pre-vibe/references/: agent-adapters.md  context-pyramid.md  language-policy.md  question-bank.md  scan-policy.md  (+3 more)
pre-vibe-plugin/tests/: test_pre_vibe.py
pre-vibe-reports/: architecture-and-test-report.md  architecture.md  coding-workflow-simulation.md  comparison-report.md  fix-report-0.1.2.md  implementation-report-0.1.1.md  plugin-review.md  reference-analysis.md
tests/: test_pre_vibe_workflow.py
